# HyperAST

./: Cargo.toml  README.md  flake.nix  rust-toolchain.toml
benchmark/: Cargo.toml
benchmark/src/: main.rs  write_serializer.rs
benchmark_diffs/: Cargo.toml
benchmark_diffs/benches/: bottomup_runtime_commits.rs  bottomup_runtime_ranges.rs  bottomup_runtime_repo.rs  iai_gumtree_comparison.rs  mapping_runtime_repo.rs
benchmark_diffs/scripts/: bench_repositories.sh  fetch_repositories.sh
benchmark_diffs/src/: bottom_up_routines.rs  buggy_fixed.rs  cross_repo.rs  diff_output.rs  lib.rs  postprocess.rs  preprocess.rs  repo_dataset.rs  window_combination.rs
benchmark_diffs/src/other_tools/: gumtree.rs
benchmark_search/: Cargo.toml
benchmark_search/queries/: meth_decl-test_annot-test_declaration.scm  test_declaration_main.scm  try_fail_catch.scm  try_fail_catch0.scm  try_fail_catch_focus.scm  try_fail_catch_focus_label_pred.scm  try_fail_catch_label_pred.scm  try_fail_catch_main.scm  try_stmt-fail-try_fail_catch.scm  try_stmt-fail-try_fail_catch0.scm
benchmark_search/scripts/: stats.sh  synth.sh  synth_res_pp.sh
benchmark_search/src/: lib.rs  no_hyperast.rs  queries.rs  synth.rs  synth_init_inst.rs  with_hyperast.rs
benchmark_smells/: Cargo.toml
benchmark_smells/src/: diffing.rs  github_ranges.rs  lib.rs  positions.rs  queries.rs  simple.rs
book/: book.toml
book/src/contribute/: architecture.md
client/: Cargo.toml
client/src/: app.rs  main.rs  scripting.rs
crates/backend/: Cargo.toml
crates/backend/examples/: kv_store.rs  rest_api.rs
crates/backend/src/: app.rs  changes.rs  cli.rs  commit.rs  examples.rs  fetch.rs  file.rs  lib.rs  log_languages.rs  main.rs  matching.rs  querying.rs  scriptingv1.rs  smells.rs  track.rs  tsg.rs  utils.rs  view.rs  ws.rs
crates/backend/tests/: querying.rs  synth.rs  track.rs
crates/hyper_ast/: Cargo.toml
crates/hyper_ast/src/: compat.rs  hashed.rs  lib.rs  nodes.rs  position.rs  slice_interning.rs  test_utils.rs  types.rs  utils.rs
crates/hyper_diff/: Cargo.toml  README.md
crates/hyper_diff/benches/: compressed_path_iter.rs  hashmap_pitfalls.rs  hashmap_pitfalls_direct_indexing.rs  legion_tree.rs  simple_tree.rs
crates/hyper_diff/src/: lib.rs  (+1 more)
crates/ref-mining-evaluation/: Cargo.toml
crates/ref-mining-evaluation/src/: compare.rs  main.rs
crates/tsquery/: Cargo.toml
crates/tsquery/src/: cursor_on_unbuild.rs  default_impls.rs  graph_overlaying.rs  hyperast_cursor.rs  hyperast_opt.rs  indexed.rs  lib.rs  precompute_pattern_predicate.rs  predicate.rs  query.rs  query_cursor.rs  stepped_query.rs  stepped_query_imm.rs  utils.rs
crates/tsquery/src/hyperast_opt/: cursor_utils.rs  cursor_utils2.rs  cursor_utils3.rs  hyperast_opt0.rs  hyperast_opt1.rs  hyperast_opt10.rs  hyperast_opt2.rs  hyperast_opt3.rs  hyperast_opt4.rs  hyperast_opt5.rs  hyperast_opt6.rs  hyperast_opt7.rs  hyperast_opt8.rs  hyperast_opt9.rs  impl_nodes.rs  impl_nodes_noref.rs  mod.rs  no_opt.rs  opt.rs  opt3.rs  opt3_noref.rs  opt4.rs  opt5.rs  opt6_ancestors_subtree.rs  opt7_ancestors_hidden.rs  opt8_parent_error.rs  opt9_parent_types.rs  opt9_parent_types2.rs  opt9_parent_types2_noref.rs
crates/tsquery/src/stepped_query/: tsg_impl.rs
crates/tsquery/src/stepped_query_imm/: tsg_impl.rs
crates/tsquery/tests/query_compilation/: main.rs
crates/tsquery/tests/query_compilation/last_child/meta_simp/: ir.txt  tsq.scm
crates/tsquery/tests/query_compilation/last_child/simple/: ir.txt  tsq.scm
egui_addon/src/: egui_utils.rs
hyper_app/: Cargo.toml  README.md  index.html
hyper_app/assets/: manifest.json
hyper_app/src/: app.rs  command.rs  lib.rs  main.rs  platform.rs  utils_poll.rs
hyper_ast/src/: nodes.rs  types.rs
hyper_diff/: Cargo.toml
hyper_view_try/: Cargo.toml
hyperast_wasm/: Cargo.toml
lib/egui_addon/: Cargo.toml
lib/egui_addon/src/: async_exec.rs  code_editor.rs  egui_utils.rs  fancy_links.rs  force_layout.rs  hscroll.rs  lib.rs  meta_edge.rs  multi_split.rs  syntax_highlighting_async.rs
lib/egui_addon/src/code_editor/: editor_content.rs  generic_state.rs  generic_text_buffer.rs  generic_text_edit.rs
lib/egui_addon/src/egui_utils/: paint_cursor.rs
lib/egui_addon/src/force_layout/: drawers.rs  node.rs  settings.rs
lib/egui_addon/src/interactive_split/: interactive_splitter.rs
lib/egui_addon/src/multi_split/: multi_splitter.rs  multi_splitter_orientation.rs
lib/egui_addon/src/syntax_highlighting/: syntax_highlighting_async.rs
lib/polyglot/: Cargo.toml
lib/polyglote/: Cargo.toml
vcs/git/: Cargo.toml
vcs/git/benches/: construction_runtime.rs
vcs/git/src/: allrefs.rs  cpp.rs  cpp_processor.rs  dir_accumulator.rs  git.rs  java.rs  java_processor.rs  lib.rs  make.rs  make_processor.rs  maven.rs  maven_processor.rs  multi_preprocessed.rs  no_space.rs  no_space2.rs  precomp_patterns.rs  preprocessed.rs  processing.rs  type_store.rs  utils.rs
vcs/git/src/processing/: blob_caching.rs  caches.rs  configurations.rs  erased.rs  file_sys.rs  object_mapper.rs
vcs/git/src/processors/: mod.rs
vcs/git/src/processors/c/: caches.rs  commit_proc.rs  impls.rs  mod.rs  processor.rs  selection.rs
vcs/git/src/processors/cpp/: caches.rs  commit_proc.rs  cpp_processor.rs  impls.rs  mod.rs  processor.rs  selection.rs
vcs/git/src/processors/file_sys/: caches.rs  commit_proc.rs  mod.rs  processor.rs  types.rs
vcs/git/src/processors/java/: caches.rs  commit_proc.rs  java_processor.rs  mod.rs  parameters.rs  processor.rs  selection.rs
vcs/git/src/processors/make/: commit_proc.rs  make_processor.rs  makefile.rs  mod.rs
vcs/git/src/processors/maven/: commit_proc.rs  iter_maven_module.rs  maven_processor.rs  mod.rs  pom.rs  processor.rs  scripting.rs
vcs/git/src/processors/python/: caches.rs  commit_proc.rs  file_sys.rs  mod.rs  processor.rs
vcs/git/src/processors/rust/: caches.rs  commit_proc.rs  file_sys.rs  mod.rs  processor.rs
vcs/git/src/processors/typescript/: caches.rs  commit_proc.rs  file_sys.rs  mod.rs  processor.rs
vcs/git/src/tests/: direct_type_ref.rs  extends_package_local.rs  mod.rs
(+236 files in other folders)
