[workspace]
resolver = "2"
members = [
    "crates/hyper_ast",
    "crates/hyper_diff",
    "lib/polyglote",
    "crates/tsquery",
    "gen/tree-sitter/*",
    "lib/egui_addon",
    "vcs/git",
    "crates/backend",
    "hyper_app",
    "benchmark_diffs",
    "benchmark_smells",
    "benchmark_search",
    "benchmark",
]
exclude = ["crates/ref-mining-evaluation", "hyperast_wasm"]
default-members = [
    "crates/hyper_ast",
    "crates/hyper_diff",
    "gen/tree-sitter/java",
    "gen/tree-sitter/cpp",
    # "gen/tree-sitter/c",
    "gen/tree-sitter/xml",
    # "gen/tree-sitter/ts",
    "gen/tree-sitter/query",
    "vcs/git",
    "crates/backend",
    # "benchmark",
    # "hyperast_wasm",
    # "crates/ref-mining-evaluation",
    "benchmark_diffs",
    "lib/egui_addon",
    "lib/polyglote",
    "crates/tsquery",
]

[workspace.dependencies]
tree-sitter-graph = { version = "0.12.0" }
tree-sitter = { version = "0.23.0" }
hyper_diff = { path = "./crates/hyper_diff" }
hyperast = { path = "./crates/hyper_ast", default-features = false }
hyperast_tsquery = { path = "./crates/tsquery" }
hyperast_vcs_git = { path = "./vcs/git" }
polyglote = { path = "./lib/polyglote" }

hyperast_gen_ts_cpp = { path = "./gen/tree-sitter/cpp" }
hyperast_gen_ts_java = { path = "./gen/tree-sitter/java" }
hyperast_gen_ts_xml = { path = "./gen/tree-sitter/xml" }
hyperast_gen_ts_tsquery = { path = "./gen/tree-sitter/query" }
hyperast_gen_ts_ts = { path = "./gen/tree-sitter/ts" }

legion = { version = "^0.4.0" }

[patch.crates-io]
tree-sitter-graph = { git = "https://github.com/quentinLeDilavrec/tree-sitter-graph", rev = "661d3545ad1b114c285c70a876299236e03d6dea", version = "0.12" }
# tree-sitter-graph = { path = "../tree-sitter-graph", optional = true }
legion = { git = "https://github.com/quentinLeDilavrec/legion", rev = "9929c5cdd1f0b844071a00725632c7c39b6fff39" }
# legion = { path = "../legion" }

[workspace.lints.rust]
unexpected_cfgs = { level = "allow" }

[workspace.lints.clippy]
# dbg_macro = "deny" // TODO
# todo = "deny" // TODO

# declare_interior_mutable_const = "deny" # TODO

# redundant_clone = "deny" # TODO
# disallowed_methods = "deny" # TODO

# Lets see
style = { level = "allow", priority = -1 } # TODO

# in Rust it can be very tedious to reduce argument count without
# running afoul of the borrow checker.
too_many_arguments = "allow"

# We often have large enum variants yet we rarely actually bother with splitting them up.
large_enum_variant = "allow"
