
[package]
name = "hyperast_benchmark_search"
version = "0.4.0"
edition = "2024"
autobins = true

[lints]
workspace = true

[dependencies]
streaming-iterator = { workspace = true } # used for recent versions of tree-sitter
tree-sitter = { workspace = true }
hyperast = { workspace = true }
hyper_diff = { workspace = true }
hyperast_vcs_git = { workspace = true }
hyperast_gen_ts_java = { workspace = true }
hyperast_gen_ts_xml = { workspace = true }
hyperast_gen_ts_tsquery = { workspace = true }
hyperast_tsquery = { workspace = true }

git2 = { version = "0.19", features = ["vendored-libgit2", "vendored-openssl"] }

tree-sitter-java = { version = "0.23.0" }
tracing-subscriber = { version = "0.3.9", features = [
    "env-filter",
] }
clap = { version = "4.5", features = ["derive"] }

env_logger = "0.11.3"
log = { version = "0.4.6", features = [
    # "max_level_debug",
    # "release_max_level_warn",
] }

num-traits = "0.2.14"

tracing-appender = "0.2.3"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { package = "tikv-jemallocator", version = "0.5.0" }

# [profile.release]
# debug=true

[features]
default = ["synth"]
synth = ["hyperast_gen_ts_tsquery/synth_par", "hyperast_gen_ts_tsquery/lattice"]
