[package]
name = "egui_frontend"
version = "0.5.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
log = "0.4.6"

ahash = "0.8"
bytemuck = { version = "1.11", features = ["extern_crate_alloc"] }
chrono = "0.4"
eframe = { version = "0.32.0", default-features = false, features = [
    "default_fonts",
    "persistence",
    "puffin",
    # "wgpu",
] }
egui = { version = "0.32.0", features = ["extra_debug_asserts", "tracing"] }
egui_extras = { version = "0.32.0", features = ["tracing"] }
image = { version = "0.24.5", default-features = false, features = [
    "jpeg",
    "png",
] }
serde = { version = "1", features = ["derive"] }
slotmap = { version = "1.0.6", features = ["serde"] }
smallvec = { version = "1.10", features = ["serde"] }
uuid = { version = "1.1", features = ["serde", "v4", "js"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }

[build-dependencies]
cargo_metadata = "0.15"
