[package]
name = "ref-mining-evaluation"
version = "0.5.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
hyperast_vcs_git = { workspace = true }
hyperast = { workspace = true, features = ["serialize"] }
log = "0.4.6"

serde = { version = "1.0.130", features = ["derive"] }
serde_with = "1.12.0"
serde_json = "1.0.79"
clap = { version = "3.1.6", features = ["derive"] }
termion = "1.5.6"

rayon = "1.5.2"
