[package]
name = "hyperast_tsquery"
version = "0.5.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
tree-sitter = { workspace = true }
tree-sitter-graph = { workspace = true, optional = true }

log = "0.4.6"

hyperast = { workspace = true, optional = true }
num = "0.4.0"

regex = "1.10.5"

ref-cast = "1.0" # help with transparent unit structs, it makes proper layout assertions

[dev-dependencies]
tree-sitter-java = { git = "https://github.com/quentinLeDilavrec/tree-sitter-java", version = "0.21.0", rev = "7699d4a296ca27fc14511bc75a1a899327f483fc" }
tree-sitter-query = { git = "https://github.com/tree-sitter-grammars/tree-sitter-query", rev = "d25e8d183f319497b8b22a2a1585975b020da722", version = "0.3.0" }
libtest-mimic = "0.8.2"
pretty_assertions = "1.4.1"

[[test]]
name = "query_compilation"
path = "tests/query_compilation/main.rs"
harness = false

[features]
default = ["hyperast", "cursor_counts"]
tsg = [
    "dep:tree-sitter-graph",
    # "dep:stack-graphs",
    # "dep:tree-sitter-stack-graphs",
]
hyperast = ["dep:hyperast", "hyperast?/native"]
cursor_counts = []
