[package]
name = "egui_addon"
version = "0.3.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
egui = { version = "0.32.0", default-features = false }
eframe = { version = "0.32.0", default-features = false }
epaint = { version = "0.32.0", default-features = false }
emath = { version = "0.32.0", default-features = false }
egui_demo_lib = { version = "0.32.0", default-features = false, features = [
    "syntect",
] }
egui_extras = { version = "0.32.0", default-features = false }
# egui_graphs = { version = "0.28.0", features = ["events"], optional = true }
egui_graphs = { git = "https://github.com/quentinLeDilavrec/egui_graphs", rev="9e83f82cb63f0733029de8c89950af27c8bac04f", features = ["events"], optional = true }
# egui_graphs = { path = "../../../egui_graphs/crates/egui_graphs", features = ["events"], optional = true }

accesskit = "0.19.0"

serde = { version = "1", optional = true, features = ["derive"] }

enum-map = { version = "2", features = ["serde"] }
log = { version = "0.4.6" }

lazy_static = "1.4.0"

wasm-rs-dbg = "0.1.2"

enumset = "1.0.12"

crossbeam-queue = "0.3.8"

syntect = { version = "5", features = [
    "default-fancy",
], default-features = false }

petgraph = { version = "0.8.3", optional = true }
crossbeam = { version = "0.8", optional = true }
# fjadra = { version = "0.2.1", optional = true }
# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
poll-promise = { version = "0.3", default-features = false }
# tracing-subscriber = "0.3"
tree-sitter-javascript = "0.23.1"
# tree-sitter = { version = "0.22.2", package = "tree-sitter-facade-sg" }
tree-sitter = { version = "0.23.2" }
tree-sitter-highlight = "0.23.2"
# tree-sitter-native = { version = "0.20.9", package = "tree-sitter" }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = "0.2.6"
poll-promise = { version = "0.3", default-features = false, features = ["web"] }
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
# tree-sitter = { version = "0.24.4", package = "tree-sitter-facade-sg", optional = true }
# web-tree-sitter-sg = { version = "1.3", optional = true }
wasm-bindgen = { version = "0.2.84" }
wasm-bindgen-futures = "0.4.34"
serde-wasm-bindgen = "0.4"
js-sys = "0.3"
# wasm-bindgen-futures = "0.4"
getrandom = { version = "0.3.4", features = ["wasm_js"] }


[[example]]
name = "hscroll"
path = "src/hscroll.rs"
harness = false
required-features = ["eframe"]


[features]
default = ["serde"]

eframe = ["eframe/glow", "eframe/default_fonts"]

# Allow serialization using [`serde`](https://docs.rs/serde).
serde = ["egui/serde", "dep:serde"]
ts_highlight = [
    # "dep:tree-sitter",
    # "dep:web-tree-sitter-sg"
]
force_layout = ["dep:egui_graphs", "dep:petgraph", "dep:crossbeam"]
