[package]
name = "egui_addon"
version = "0.5.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
egui = { version = "0.32.0", default-features = false, features = [
    "accesskit",
] }
eframe = { version = "0.32.0", default-features = false, features = [
    "accesskit",
] }
epaint = { version = "0.32.0", default-features = false }
emath = { version = "0.32.0", default-features = false }
egui_demo_lib = { version = "0.32.0", default-features = false, features = [
    "syntect",
] }
egui_extras = { version = "0.32.0", default-features = false }
egui_graphs = { git = "https://github.com/quentinLeDilavrec/egui_graphs", rev="dff8890ee4f50e57b0059a17fd8c7df940e35fe6", features = ["events"], optional = true }

accesskit = "0.19.0"

serde = { version = "1", optional = true, features = ["derive"] }

enum-map = { version = "2", features = ["serde"] }
log = { version = "0.4.6" }

lazy_static = "1.4.0"

wasm-rs-dbg = "0.1.2"

enumset = "1.0.12"

crossbeam-queue = "0.3.8"

syntect = { version = "5", features = [
    "default-fancy",
], default-features = false }

petgraph = { version = "0.8.3", optional = true }
crossbeam = { version = "0.8", optional = true }
# fjadra = { version = "0.2.1", optional = true }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
poll-promise = { version = "0.3", default-features = false }
tree-sitter-javascript = "0.23.1"
tree-sitter = { version = "0.25.0" }
tree-sitter-highlight = "0.25.0"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = "0.2.6"
poll-promise = { version = "0.3", default-features = false, features = ["web"] }
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen = { version = "0.2.84" }
wasm-bindgen-futures = "0.4.34"
serde-wasm-bindgen = "0.4"
js-sys = "0.3"
getrandom = { version = "0.3.4", features = ["wasm_js"] }


[[example]]
name = "hscroll"
path = "src/hscroll.rs"
harness = false
required-features = ["eframe"]


[features]
default = ["serde"]

eframe = ["eframe/glow", "eframe/default_fonts"]

serde = ["egui/serde", "dep:serde"]
ts_highlight = [
    # "dep:tree-sitter",
]
force_layout = ["dep:egui_graphs", "dep:petgraph", "dep:crossbeam"]
