[package]
name = "hyperast_vcs_git"
version = "0.5.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
git2 = { version = "0.19", features = ["vendored-libgit2", "vendored-openssl"] }
tree-sitter = { workspace = true }
hyperast_gen_ts_cpp = { workspace = true, optional = true }
hyperast_gen_ts_java = { workspace = true, optional = true }
hyperast_gen_ts_python = { workspace = true, optional = true }
hyperast_gen_ts_xml = { workspace = true, optional = true }
hyperast = { workspace = true }
hyperast_tsquery = { workspace = true }
log = { version = "0.4.6" }
num = "0.4.0"

enumset = "1.0.12"

serde = { version = "1.0.130" }

tree-sitter-graph = { workspace = true, optional = true }
vec_extract_if_polyfill = "0.1.0"

[dev-dependencies]
env_logger = "0.11.3"
tree-sitter-graph = { workspace = true }
hyperast_tsquery = { workspace = true, features = ["tsg"] }
hyperast_gen_ts_java = { workspace = true } #, features = ["subtree-stats"]
criterion = { workspace = true }

[target.'cfg(not(target_env = "msvc"))'.dev-dependencies]
jemallocator = { package = "tikv-jemallocator", version = "0.5.0" }

[[bench]]
name = "construction_runtime"
harness = false

[features]
default = ["maven_java", "make_cpp", "npm_ts", "python", "file_sys"]
tsg = ["dep:tree-sitter-graph", "hyperast_tsquery/tsg"]
file_sys = []
maven_java = ["maven", "java"]
maven = ["dep:hyperast_gen_ts_xml"]
# gradle = []
java = ["dep:hyperast_gen_ts_java"]
# kotlin = []
# scala = []
make_cpp = ["make", "cpp"]
make = []
# cmake = []
# ninja = []
cpp = ["dep:hyperast_gen_ts_cpp"]
# c = []
npm_ts = ["npm", "ts"]
npm = []
ts = []
# js = []
# tsx = []
# cargo_rust = []
# cargo = []
# rust = []
python = ["dep:hyperast_gen_ts_python"]
impact = []
subtree-stats = [
    "hyperast/subtree-stats",
    "hyperast_gen_ts_java/subtree-stats"
]
